change 699.html 899.html xiaoguotu beijing

--- a/699.html
+++ b/699.html
@@ -61,7 +61,7 @@
 			</div>
 		</header>
 		<div style="min-width:1336px;height:320px;display:block;background:url(img/JX.jpg) no-repeat;"></div>
-		<div style="height:700px;display:block;background:url(img/xline.jpg)">
+		<div style="min-width:1336px;height:700px;display:block;margin:0 auto;background:url(img/xline.jpg)">
 			<div style="width:1000px;height:700px;margin:0 auto;">
 				<div style="font-size:36px;text-align:center;height:100px;line-height:100px;color:#663900;">
 					699极限精装 效果
