--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<header style="min-width:1336px;height:150px;display:block;">
 			<div style="width:1000px;height:150px;margin:0 auto;">
 				<div id="logo">
-					<img src="http://oaapf37iy.bkt.clouddn.com/LOGO.jpg" style="width:300px;height:150px;border:none;" alt="福润天猫" />
+					<img src="img/LOGO.jpg" style="width:300px;height:150px;border:none;" alt="福润天猫" />
 				</div>
 				
 				<div id="nav">
@@ -63,7 +63,7 @@
 		<div >
 			<div class="bj01">
 				<div style="width:1000px;margin:0 auto;">
-					<div style="width:330px;height:430px;padding-top:60px;background:url(http://oaapf37iy.bkt.clouddn.com/erb.png) repeat;">
+					<div style="width:330px;height:430px;padding-top:60px;background:url(img/erb.png) repeat;">
 						<form name="reg" method="post" action="reg.php" onsubmit="return submitck()">
 							<div class="formLine">
 								<label>姓名</label><input style="border-radius:10px;padding:0 5px;width:169px;" type="text" name="userName" size="10" value="输入真实姓名" onfocus="inputName(this)" onblur="ckName(this)" />
@@ -185,31 +185,31 @@
 			<div class="bj02">
 				<div style="width:1000px;height:416px;padding-top:90px;display:block;margin:0 auto;text-align:center;font-family:'微软雅黑','黑体',sans-serif;color:#5C5D60;font-weight:holod;">
 					<header style="font-size:38px;letter-spacing:20px;">
-						<img src="http://oaapf37iy.bkt.clouddn.com/line.jpg" align="middle" /> 福润天猫大品牌联合<img src="http://oaapf37iy.bkt.clouddn.com/line.jpg" align="middle" />
+						<img src="img/line.jpg" align="middle" /> 福润天猫大品牌联合<img src="img/line.jpg" align="middle" />
 					</header>
 					<div style="width:1000px;height:150px;margin:30px 0;">
 						<div class="iconBox" style="margin-left:0;">
-							<img src="http://oaapf37iy.bkt.clouddn.com/icon01.png" style="margin-top:10px;" />
+							<img src="img/icon01.png" style="margin-top:10px;" />
 							<div class="iconInfo">包设计</div>
 						</div>
 						<div class="iconBox" >
-							<img src="http://oaapf37iy.bkt.clouddn.com/icon02.png" style="margin-top:18px;" />
+							<img src="img/icon02.png" style="margin-top:18px;" />
 							<div class="iconInfo">包主材</div>
 						</div>
 						<div class="iconBox" >
-							<img src="http://oaapf37iy.bkt.clouddn.com/icon03.png" style="margin-top:25px;" />
+							<img src="img/icon03.png" style="margin-top:25px;" />
 							<div class="iconInfo">包施工</div>
 						</div>
 						<div class="iconBox" >
-							<img src="http://oaapf37iy.bkt.clouddn.com/icon04.png" style="margin-top:25px;" />
+							<img src="img/icon04.png" style="margin-top:25px;" />
 							<div class="iconInfo">包监理</div>
 						</div>
 						<div class="iconBox" >
-							<img src="http://oaapf37iy.bkt.clouddn.com/icon05.png" width="50px" height="52px" style="margin-top:25px;" />
+							<img src="img/icon05.png" width="50px" height="52px" style="margin-top:25px;" />
 							<div class="iconInfo">包售后</div>
 						</div>
 						<div class="iconBox" >
-							<img src="http://oaapf37iy.bkt.clouddn.com/icon06.png" style="margin-top:15px;" />
+							<img src="img/icon06.png" style="margin-top:15px;" />
 							<div class="iconInfo">实景体验</div>
 						</div>
 					</div>
@@ -479,7 +479,7 @@
 			</div>
 			<div style="min-width:1336px;margin:0 auto;text-align:center;">
 				<div style="width:1000px;height:100px;margin:20px auto;border:2px solid #C21820;border-radius:10px;">
-					<img style="margin:10px 50px;float:left;" src="http://oaapf37iy.bkt.clouddn.com/kj.png" alt="科教频道" />
+					<img style="margin:10px 50px;float:left;" src="img/kj.png" alt="科教频道" />
 					<div style="margin:25px;font-size:24px;text-align:center;">山西科教频道《都市110》全程监督  绝无隐性增量消费<br>
 	售后无忧  48小时解决售后问题</div>
 				</div>
@@ -492,13 +492,13 @@
 		</div>
 		<div style="position:fixed;right:20px;top:30%;z-index:10;">
 			<div id="er" class="block" style="cursor:pointer;" onmouseover="displ(this)" onmouseout="nodispl(this)">
-				<img src="http://oaapf37iy.bkt.clouddn.com/er.png" alt="二维码" />
+				<img src="img/er.png" alt="二维码" />
 				<div style="width:200px;position:relative;left:-200px;top:-69px;display:none;">
-					<img src="http://oaapf37iy.bkt.clouddn.com/erweima.jpg" alt="微信二维码" />
+					<img src="img/erweima.jpg" alt="微信二维码" />
 				</div>
 			</div>
 			<div id="menu" class="block" onmouseover="displ(this)" onmouseout="nodispl(this)">
-				<img src="http://oaapf37iy.bkt.clouddn.com/menu.png" alt="菜单" />
+				<img src="img/menu.png" alt="菜单" />
 				<div style="width:90px;position:relative;left:-90px;top:-69px;text-align:center;display:none;">
 					<div class="menu"><a href="#zcpack">主材包</a></div>
 					<div class="menu"><a href="#video">活动视频</a></div>
@@ -519,10 +519,10 @@
 				}
 			</script>
 			<div id="kf" class="block">
-				<a href="http://p.qiao.baidu.com/cps/chat?siteId=9049076&userId=20892068" target="_blank"><img src="http://oaapf37iy.bkt.clouddn.com/kf.png" alt="在线咨询" /></a>
+				<a href="http://p.qiao.baidu.com/cps/chat?siteId=9049076&userId=20892068" target="_blank"><img src="img/kf.png" alt="在线咨询" /></a>
 			</div>
 			<div class="block">
-				<a href="#top"><img src="http://oaapf37iy.bkt.clouddn.com/top.png" alt="回到顶部" /></a>
+				<a href="#top"><img src="img/top.png" alt="回到顶部" /></a>
 			</div>
 		</div>
 		<footer>
@@ -533,7 +533,7 @@
 					地址:山西省太原市太榆路新兴国际文教城以南（转108国道1000米处）<br>
 					&copy; 2015-2020 山西福润天猫网络科技有限公司&reg; 版权所有&copy;
 					</p>
-					<img src="http://oaapf37iy.bkt.clouddn.com/erweima.jpg" alt="微信二维码" />
+					<img src="img/erweima.jpg" alt="微信二维码" />
 				</div>
 			</div>
 		</footer>
