codified: index.html

--- a/index.html
+++ b/index.html
@@ -520,10 +520,12 @@
 			</script>
 			<div id="kf" class="block">
 				<a href="http://p.qiao.baidu.com/cps/chat?siteId=9049076&userId=20892068" target="_blank"><img src="img/kf.png" alt="在线咨询" /></a>
+				
 			</div>
 			<div class="block">
 				<a href="#top"><img src="img/top.png" alt="回到顶部" /></a>
 			</div>
+			<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:3503496104:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
 		</div>
 		<footer>
 			
