--- a/699.html
+++ b/699.html
@@ -22,7 +22,7 @@
 		<header style="min-width:1336px;height:150px;display:block;">
 			<div style="width:1000px;height:150px;margin:0 auto;">
 				<div id="logo">
-					<img src="http://oaapf37iy.bkt.clouddn.com/LOGO.jpg" style="width:300px;height:150px;border:none;" alt="福润天猫" />
+					<img src="img/LOGO.jpg" style="width:300px;height:150px;border:none;" alt="福润天猫" />
 				</div>
 				
 				<div id="nav">
@@ -127,13 +127,13 @@
 		</div>
 		<div style="position:fixed;right:20px;top:30%;z-index:10;">
 			<div id="er" class="block" style="cursor:pointer;" onmouseover="displ(this)" onmouseout="nodispl(this)">
-				<img src="http://oaapf37iy.bkt.clouddn.com/er.png" alt="二维码" />
+				<img src="img/er.png" alt="二维码" />
 				<div style="width:200px;position:relative;left:-200px;top:-69px;display:none;">
-					<img src="http://oaapf37iy.bkt.clouddn.com/erweima.jpg" alt="微信二维码" />
+					<img src="img/erweima.jpg" alt="微信二维码" />
 				</div>
 			</div>
 			<!--<div id="menu" class="block" onmouseover="displ(this)" onmouseout="nodispl(this)">
-				<img src="http://oaapf37iy.bkt.clouddn.com/menu.png" alt="菜单" />
+				<img src="img/menu.png" alt="菜单" />
 				<div style="width:90px;position:relative;left:-90px;top:-69px;text-align:center;display:none;">
 					<div class="menu"><a href="#CiZuan">瓷砖</a></div>
 					<div class="menu"><a href="#DiBan">地板</a></div>
@@ -158,11 +158,12 @@
 				}
 			</script>
 			<div id="kf" class="block">
-				<a href="http://p.qiao.baidu.com/cps/chat?siteId=9049076&userId=20892068" target="_blank"><img src="http://oaapf37iy.bkt.clouddn.com/kf.png" alt="在线咨询" /></a>
+				<a href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
 			</div>
 			<div class="block">
-				<a href="#top"><img src="http://oaapf37iy.bkt.clouddn.com/top.png" alt="回到顶部" /></a>
+				<a href="#top"><img src="img/top.png" alt="回到顶部" /></a>
 			</div>
+			<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:3503496104:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
 		</div>
 		<footer>
 			<div style="background:#2D2D2D;color:#eeeeee;width:100%;min-width:1336px;height:230px;text-align:center;line-height:30px;padding-top:30px;">
@@ -171,7 +172,7 @@
 					地址:山西省太原市太榆路新兴国际文教城以南（转108国道1000米处）<br>
 					&copy; 2015-2020 山西福润天猫网络科技有限公司&reg; 版权所有&copy;
 					</p>
-					<img src="http://oaapf37iy.bkt.clouddn.com/erweima.jpg" alt="微信二维码" />
+					<img src="img/erweima.jpg" alt="微信二维码" />
 				</div>
 			</div>
 		</footer>
