--- a/ZC.html
+++ b/ZC.html
@@ -22,7 +22,7 @@
 		<header style="min-width:1336px;height:150px;display:block;">
 			<div style="width:1000px;height:150px;margin:0 auto;">
 				<div id="logo">
-					<img src="http://oaapf37iy.bkt.clouddn.com/LOGO.jpg" style="width:300px;height:150px;border:none;" alt="福润天猫" />
+					<img src="img/LOGO.jpg" style="width:300px;height:150px;border:none;" alt="福润天猫" />
 				</div>
 				
 				<div id="nav">
@@ -73,17 +73,17 @@
 				<div class="maodian"><a href="#KaiGuan">开关插座</a></div>-->
 				<div class="maodian"><a href="#BiZhi">壁纸</a></div>
 			</div>
-			<div id="CiZuan" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/czuan.jpg) no-repeat top center;"></div>
+			<div id="CiZuan" class="zcbanner" style="background:url(img/czuan.jpg) no-repeat top center;"></div>
 			<div class="content">
-				<div style="padding:57px 0 0 45px;width:813px;height:869px;margin:0 auto;background:url(http://oaapf37iy.bkt.clouddn.com/tv.png) no-repeat;">
-					<video width="720px" height="540px" src="http://oaapf37iy.bkt.clouddn.com/FantcTest0721.mp4" controls="controls">您的浏览器不支持视频播放</video>
+				<div style="padding:57px 0 0 45px;width:813px;height:869px;margin:0 auto;background:url(img/tv.png) no-repeat;">
+					<video width="720px" height="540px" src="img/FantcTest0721.mp4" controls="controls">您的浏览器不支持视频播放</video>
 				</div>
-				<img src="http://oaapf37iy.bkt.clouddn.com/cz01.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/cz02.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/cz03.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/cz04.jpg" />
+				<img src="img/cz01.jpg" />
+				<img src="img/cz02.jpg" />
+				<img src="img/cz03.jpg" />
+				<img src="img/cz04.jpg" />
 			</div>
-			<div id="DiBan" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/diban.jpg) no-repeat top center;display:block;"></div>
+			<div id="DiBan" class="zcbanner" style="background:url(img/diban.jpg) no-repeat top center;display:block;"></div>
 			<div class="diban content">
 				<!--<ul>
 					<li>
@@ -100,49 +100,49 @@
 					</li>
 				</ul>
 				<div style="clear:both;"></div>-->
-				<img src="http://oaapf37iy.bkt.clouddn.com/dib01.jpg" />
+				<img src="img/dib01.jpg" />
 			</div>
-			<div id="NeiMen" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/mumen.jpg) no-repeat top center;"></div>
+			<div id="NeiMen" class="zcbanner" style="background:url(img/mumen.jpg) no-repeat top center;"></div>
 			<div class="content">
-				<img src="http://oaapf37iy.bkt.clouddn.com/mm1.jpg" />
+				<img src="img/mm1.jpg" />
 			</div>
-			<div id="CuGui" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/cugui.jpg) no-repeat top center;"></div>
+			<div id="CuGui" class="zcbanner" style="background:url(img/cugui.jpg) no-repeat top center;"></div>
 			<div class="content">
-				<img src="http://oaapf37iy.bkt.clouddn.com/cg1.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/cg02.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/cg03.jpg" />
+				<img src="img/cg1.jpg" />
+				<img src="img/cg02.jpg" />
+				<img src="img/cg03.jpg" />
 			</div>
-			<div id="WeiYu" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/weiyu.jpg) no-repeat top center;"></div>
+			<div id="WeiYu" class="zcbanner" style="background:url(img/weiyu.jpg) no-repeat top center;"></div>
 			<div class="content">
-				<img src="http://oaapf37iy.bkt.clouddn.com/wy01.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/wy02.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/wy03.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/wy04.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/wy05.jpg" />
+				<img src="img/wy01.jpg" />
+				<img src="img/wy02.jpg" />
+				<img src="img/wy03.jpg" />
+				<img src="img/wy04.jpg" />
+				<img src="img/wy05.jpg" />
 			</div>
-			<div id="DiaoDing" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/diaoding.jpg) no-repeat top center;"></div>
+			<div id="DiaoDing" class="zcbanner" style="background:url(img/diaoding.jpg) no-repeat top center;"></div>
 			<div  class="content">
-				<img src="http://oaapf37iy.bkt.clouddn.com/dding01.jpg" />
-				<img src="http://oaapf37iy.bkt.clouddn.com/dding02.jpg" />
+				<img src="img/dding01.jpg" />
+				<img src="img/dding02.jpg" />
 			</div>
-			<!--<div id="DengJu" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/bnbj.jpg) no-repeat top center;"></div>
+			<!--<div id="DengJu" class="zcbanner" style="background:url(img/bnbj.jpg) no-repeat top center;"></div>
 			<div class="content"></div>
-			<div id="KaiGuan" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/bnbj.jpg) no-repeat top center;"></div>
+			<div id="KaiGuan" class="zcbanner" style="background:url(img/bnbj.jpg) no-repeat top center;"></div>
 			<div class="content"></div>-->
-			<div id="BiZhi" class="zcbanner" style="background:url(http://oaapf37iy.bkt.clouddn.com/biz.jpg) no-repeat top center;"></div>
+			<div id="BiZhi" class="zcbanner" style="background:url(img/biz.jpg) no-repeat top center;"></div>
 			<div class="content">
-				<img src="http://oaapf37iy.bkt.clouddn.com/bizi01.jpg" />
+				<img src="img/bizi01.jpg" />
 			</div>
 		</div>
 		<div style="position:fixed;right:20px;top:30%;z-index:10;">
 			<div id="er" class="block" style="cursor:pointer;" onmouseover="displ(this)" onmouseout="nodispl(this)">
-				<img src="http://oaapf37iy.bkt.clouddn.com/er.png" alt="二维码" />
+				<img src="img/er.png" alt="二维码" />
 				<div style="width:200px;position:relative;left:-200px;top:-69px;display:none;">
-					<img src="http://oaapf37iy.bkt.clouddn.com/erweima.jpg" alt="微信二维码" />
+					<img src="img/erweima.jpg" alt="微信二维码" />
 				</div>
 			</div>
 			<div id="menu" class="block" onmouseover="displ(this)" onmouseout="nodispl(this)">
-				<img src="http://oaapf37iy.bkt.clouddn.com/menu.png" alt="菜单" />
+				<img src="img/menu.png" alt="菜单" />
 				<div style="width:90px;position:relative;left:-90px;top:-69px;text-align:center;display:none;">
 					<div class="menu"><a href="#CiZuan">瓷砖</a></div>
 					<div class="menu"><a href="#DiBan">地板</a></div>
@@ -167,11 +167,12 @@
 				}
 			</script>
 			<div id="kf" class="block">
-				<a href="http://p.qiao.baidu.com/cps/chat?siteId=9049076&userId=20892068" target="_blank"><img src="http://oaapf37iy.bkt.clouddn.com/kf.png" alt="在线咨询" /></a>
+				<a href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
 			</div>
 			<div class="block">
-				<a href="#top"><img src="http://oaapf37iy.bkt.clouddn.com/top.png" alt="回到顶部" /></a>
+				<a href="#top"><img src="img/top.png" alt="回到顶部" /></a>
 			</div>
+			<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:3503496104:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
 		</div>
 		<footer>
 			<div style="background:#2D2D2D;color:#eeeeee;width:100%;min-width:1336px;height:230px;text-align:center;line-height:30px;padding-top:30px;">
@@ -180,7 +181,7 @@
 					地址:山西省太原市太榆路新兴国际文教城以南（转108国道1000米处）<br>
 					&copy; 2015-2020 山西福润天猫网络科技有限公司&reg; 版权所有&copy;
 					</p>
-					<img src="http://oaapf37iy.bkt.clouddn.com/erweima.jpg" alt="微信二维码" />
+					<img src="img/erweima.jpg" alt="微信二维码" />
 				</div>
 			</div>
 		</footer>
