--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			
 			<div id="video" class="bj06">
 				<div style="width:1000px;margin:0 auto;padding:110px 0 0 140px;">
-					<video src="http://oaapf37iy.bkt.clouddn.com/video-edit0313-1500.mp4" width="845px" height="613px" controls="controls" >您的浏览器不支持HTML5的视频</video>
+					<video src="img/video-edit0313-1500.mp4" width="845px" height="613px" controls="controls" >您的浏览器不支持HTML5的视频</video>
 				</div>
 			</div>
 			
@@ -519,7 +519,7 @@
 				}
 			</script>
 			<div id="kf" class="block">
-				<a href="http://p.qiao.baidu.com/cps/chat?siteId=9049076&userId=20892068" target="_blank"><img src="img/kf.png" alt="在线咨询" /></a>
+				<a href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
 				
 			</div>
 			<div class="block">
