--- a/ZC.html
+++ b/ZC.html
@@ -76,7 +76,7 @@
 			<div id="CiZuan" class="zcbanner" style="background:url(img/czuan.jpg) no-repeat top center;"></div>
 			<div class="content">
 				<div style="padding:57px 0 0 45px;width:813px;height:869px;margin:0 auto;background:url(img/tv.png) no-repeat;">
-					<video width="720px" height="540px" src="img/FantcTest0721.mp4" controls="controls">您的浏览器不支持视频播放</video>
+					<video width="720px" height="540px" src="http://oaapf37iy.bkt.clouddn.com/FantcTest0721.mp4" controls="controls">您的浏览器不支持视频播放</video>
 				</div>
 				<img src="img/cz01.jpg" />
 				<img src="img/cz02.jpg" />
@@ -167,7 +167,7 @@
 				}
 			</script>
 			<div id="kf" class="block">
-				<a href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
+				<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
 			</div>
 			<div class="block">
 				<a href="#top"><img src="img/top.png" alt="回到顶部" /></a>
