--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 				}
 			</script>
 			<div id="kf" class="block">
-				<a href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
+				<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3503496104&site=qq&menu=yes"><img src="img/kf.png" alt="在线咨询" /></a>
 				
 			</div>
 			<div class="block">
