modifile index.html

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			
 			<div id="video" class="bj06">
 				<div style="width:1000px;margin:0 auto;padding:110px 0 0 140px;">
-					<video src="img/video-edit0313-1500.mp4" width="845px" height="613px" controls="controls" >您的浏览器不支持HTML5的视频</video>
+					<video src="http://oaapf37iy.bkt.clouddn.com/video1484-2983.mp4" width="845px" height="613px" controls="controls" >您的浏览器不支持HTML5的视频</video>
 				</div>
 			</div>
 			
