--- a/ZC.html
+++ b/ZC.html
@@ -81,7 +81,7 @@
 				<img src="img/cz01.jpg" />
 				<img src="img/cz02.jpg" />
 				<img src="img/cz03.jpg" />
-				<img src="img/cz04.jpg" />
+				<!--<img src="img/cz04.jpg" />-->
 			</div>
 			<div id="DiBan" class="zcbanner" style="background:url(img/diban.jpg) no-repeat top center;display:block;"></div>
 			<div class="diban content">
