--- a/ZC.html
+++ b/ZC.html
@@ -73,7 +73,7 @@
 				<div class="maodian"><a href="#KaiGuan">开关插座</a></div>-->
 				<div class="maodian"><a href="#BiZhi">壁纸</a></div>
 			</div>
-			<div id="CiZuan" class="zcbanner" style="background:url(img/czuan.jpg) no-repeat top center;"></div>
+			<div id="CiZuan" class="zcbanner" style="background:url(img/zuan.jpg) no-repeat top center;"></div>
 			<div class="content">
 				<div style="padding:57px 0 0 45px;width:813px;height:869px;margin:0 auto;background:url(img/tv.png) no-repeat;">
 					<video width="720px" height="540px" src="http://oaapf37iy.bkt.clouddn.com/FantcTest0721.mp4" controls="controls">您的浏览器不支持视频播放</video>
