--- a/ZC.html
+++ b/ZC.html
@@ -177,7 +177,7 @@
 		<footer>
 			<div style="background:#2D2D2D;color:#eeeeee;width:100%;min-width:1336px;height:230px;text-align:center;line-height:30px;padding-top:30px;">
 				<div style="width:1000px;margin:0 auto;">
-					<p style="text-align:left;float:left;margin-top:30px;font-size:18px;line-height:32px;">咨询热线：400-1806-186 / 0351-2178962  在线客服：9:00-23:00<br />
+					<p style="text-align:left;float:left;margin-top:30px;font-size:18px;line-height:32px;">咨询热线：400-1806-186 / 0351-2178962<br />在线客服：9:00-23:00<br />
 					地址:山西省太原市太榆路新兴国际文教城以南（转108国道1000米处）<br>
 					&copy; 2015-2020 山西福润天猫网络科技有限公司&reg; 版权所有&copy;
 					</p>
