--- a/SG.html
+++ b/SG.html
@@ -29,10 +29,10 @@
 					<div style="width:0px;height:0px;float:left;display: block;border-left: 30px solid rgba(0,0,0,0);border-top: 30px solid rgba(0,0,0,0);border-right: 30px solid #c00;border-bottom: 30px solid #c00;"></div>
 					<ul>
 						<li><a href="/">首页</a></li>
-						<li onmouseover="subnav(this,1)" onmouseout="subnav(this,0)"><a href="/699.html">极限精装</a>
+						<li onmouseover="subnav(this,1)" onmouseout="subnav(this,0)"><a href="/799.html">极限精装</a>
 							<div style="display:none">
-								<menu><a href="/699.html">699精装</a></menu>
-								<menu><a href="/899.html">899精装</a></menu>
+								<menu><a href="/799.html">799精装</a></menu>
+								<!--<menu><a href="/899.html">899精装</a></menu>-->
 							</div>
 						</li>
 						<script>
