--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<div style="width:0px;height:0px;float:left;display: block;border-left: 30px solid rgba(0,0,0,0);border-top: 30px solid rgba(0,0,0,0);border-right: 30px solid #c00;border-bottom: 30px solid #c00;"></div>
 					<ul>
 						<li style="background:#780B0B" ><a href="/">首页</a></li>
-						<li onmouseover="subnav(this,1)" onmouseout="subnav(this,0)"><a href="/699.html">极限精装</a>
+						<li onmouseover="subnav(this,1)" onmouseout="subnav(this,0)"><a href="/799.html">极限精装</a>
 							<div style="display:none">
-								<menu><a href="/699.html">699精装</a></menu>
-								<menu><a href="/899.html">899精装</a></menu>
+								<menu><a href="/799.html">799精装</a></menu>
+								<!--<menu><a href="/899.html">899精装</a></menu>-->
 							</div>
 						</li>
 						<script>
@@ -468,7 +468,7 @@
 					<div style="float:left;height:80px;line-height:80px;font-size:60px;">大品牌联合</div>
 					<div style="float:left;margin-left:20px;height:40px;line-height:40px;font-size:30px;">
 						包设计/包主材/包施工<br />
-						<div style="font-size:20px;">毛胚到精装仅需699元/平米</div>
+						<div style="font-size:20px;">毛胚到精装仅需799元/平米</div>
 					</div>
 					<div style="clear:both;"></div>
 				</div>
