--- a/JGT.html
+++ b/JGT.html
@@ -4,7 +4,7 @@
 		<meta charset="gbk" />
 		<meta name="keywords" Content="福润天猫,科教频道,都市110,极限家装,整体家装,装修平台,家装平台,家具,家装" />
 		<meta name="descripts" Content="太原天猫家装到哪里？福润天猫在这里。一线大品牌厂家联合福润家具，将实惠，让利到底。没有中间商，没有零售商，甚至没有批发商。客户直接从厂家以厂价直购。如果还不放心，电视台来做监督。确保，客户切身利益。极限家装看这里，福润天猫。" />
-		<title>899家装-福润天猫-整体家装平台-官网</title>
+		<title>799家装-福润天猫-整体家装平台-官网</title>
 		<link rel="shortcut icon" href="/favicon.ico"/>
 		<link rel="bookmark" href="/favicon.ico"/>
 		<script src="html5.js"></script>
@@ -29,10 +29,10 @@
 					<div style="width:0px;height:0px;float:left;display: block;border-left: 30px solid rgba(0,0,0,0);border-top: 30px solid rgba(0,0,0,0);border-right: 30px solid #c00;border-bottom: 30px solid #c00;"></div>
 					<ul>
 						<li><a href="/">首页</a></li>
-						<li style="background:#780B0B" onmouseover="subnav(this,1)" onmouseout="subnav(this,0)"><a href="/799.html">极限精装</a>
+						<li><a href="/799.html">极限精装</a>
 							<div style="display:none">
-								<menu><a href="/799.html">799精装</a></menu>
-								<menu style="background:#780B0B"><a href="/899.html">899精装</a></menu>
+								<menu style="background:#780B0B"><a href="/799.html">799精装</a></menu>
+								<!--<menu><a href="/899.html">899精装</a></menu>-->
 							</div>
 						</li>
 						<script>
@@ -50,7 +50,7 @@
 						<li><a href="/ZC.html">主材</a></li>
 						<!--<li><a href="/PZ.html">配置单</a></li>-->
 						<li><a href="/SG.html">施工</a></li>
-						<li><a href="/JGT.html">竣工展示</a></li>
+						<li style="background:#780B0B"><a href="/JGT.html">竣工展示</a></li>
 					</ul>
 					<div style="float:left;width:160px;height:60px;background:#C81313;display:block;text-align:center;padding-right:20px;">
 						<div style="text-align:center;width:100px;height:24px;line-height:24px;border-radius:12px;color:#000000;background:#ffffff;margin:20px 0 0 40px;">
@@ -65,7 +65,7 @@
 		<div style="min-width:1336px;height:700px;display:block;margin:0 auto;background:url(img/xline.jpg)">
 			<div style="width:1000px;height:700px;margin:0 auto;">
 				<div style="font-size:36px;text-align:center;height:100px;line-height:100px;color:#663900;">
-					899升级精装 效果
+					竣工的展示图片
 				</div>
 				<div id="bnav" class="left boxback">
 					<div class="bbox on" onclick="sel(this,0)">
@@ -98,15 +98,15 @@
 				</div>
 				<div class="right ttBoxBack">
 					<div id="cbox" class="ttBox" style="top:0px;">
-						<img src="img/XGT/canting899.jpg" />
-						<img src="img/XGT/chufang899.jpg" />
-						<img src="img/XGT/keting899.jpg" />
-						<img src="img/XGT/woshi899.jpg" />
-						<img src="img/XGT/weisenjian899.jpg" />
-						<img src="img/XGT/shufang899.jpg" />
-						<img src="img/XGT/ertongfang899.jpg" />
-						<img src="img/XGT/xuanguan899.jpg" />
-						<img src="img/XGT/yangtai899.jpg" />
+						<img src="img/XGT/canting799.jpg" />
+						<img src="img/XGT/chufang799.jpg" />
+						<img src="img/XGT/keting799.jpg" />
+						<img src="img/XGT/woshi799.jpg" />
+						<img src="img/XGT/weisenjian799.jpg" />
+						<img src="img/XGT/shufang799.jpg" />
+						<img src="img/XGT/ertongfang799.jpg" />
+						<img src="img/XGT/xuanguan799.jpg" />
+						<img src="img/XGT/yangtai799.jpg" />
 					</div>
 				</div>
 				
