--- a/SG.html
+++ b/SG.html
@@ -50,6 +50,7 @@
 						<li><a href="/ZC.html">主材</a></li>
 						<!--<li><a href="/PZ.html">配置单</a></li>-->
 						<li style="background:#780B0B" ><a href="/SG.html">施工</a></li>
+						<li><a href="/JGT.html">竣工展示</a></li>
 					</ul>
 					<div style="float:left;width:160px;height:60px;background:#C81313;display:block;text-align:center;padding-right:20px;">
 						<div style="text-align:center;width:100px;height:24px;line-height:24px;border-radius:12px;color:#000000;background:#ffffff;margin:20px 0 0 40px;">
