--- a/JGT.html
+++ b/JGT.html
@@ -62,52 +62,32 @@
 			</div>
 		</header>
 		<div style="min-width:1336px;height:320px;display:block;background:url(img/JX.jpg) no-repeat;"></div>
-		<div style="min-width:1336px;height:700px;display:block;margin:0 auto;background:url(img/xline.jpg)">
-			<div style="width:1000px;height:700px;margin:0 auto;">
+		<div style="min-width:1336px;display:block;margin:0 auto;background:url(img/xline.jpg)">
+			<div style="width:1000px;margin:0 auto;">
 				<div style="font-size:36px;text-align:center;height:100px;line-height:100px;color:#663900;">
 					竣工的展示图片
 				</div>
-				<div id="bnav" class="left boxback">
-					<div class="bbox on" onclick="sel(this,0)">
-					餐厅<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,1)">
-					厨房<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,2)">
-					客厅<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,3)">
-					卧室<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,4)">
-					卫生间<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,5)">
-					书房<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,6)">
-					儿童房<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,7)">
-					玄关<i></i>
-					</div>
-					<div class="bbox" onclick="sel(this,8)">
-					阳台<i></i>
-					</div>
-				</div>
-				<div class="right ttBoxBack">
-					<div id="cbox" class="ttBox" style="top:0px;">
-						<img src="img/XGT/canting799.jpg" />
-						<img src="img/XGT/chufang799.jpg" />
-						<img src="img/XGT/keting799.jpg" />
-						<img src="img/XGT/woshi799.jpg" />
-						<img src="img/XGT/weisenjian799.jpg" />
-						<img src="img/XGT/shufang799.jpg" />
-						<img src="img/XGT/ertongfang799.jpg" />
-						<img src="img/XGT/xuanguan799.jpg" />
-						<img src="img/XGT/yangtai799.jpg" />
-					</div>
+			
+				<div class="tBoxBack">
+					<img src="img/jgt/jg001.jpg" />
+          <img src="img/jgt/jg002.jpg" />
+          <img src="img/jgt/jg003.jpg" />
+          <img src="img/jgt/jg004.jpg" />
+          <img src="img/jgt/jg005.jpg" />
+          <img src="img/jgt/jg006.jpg" />
+          <img src="img/jgt/jg007.jpg" />
+          <img src="img/jgt/jg008.jpg" />
+          <img src="img/jgt/jg009.jpg" />
+          <img src="img/jgt/jg010.jpg" />
+          <img src="img/jgt/jg011.jpg" />
+          <img src="img/jgt/jg012.jpg" />
+          <img src="img/jgt/jg013.jpg" />
+          <img src="img/jgt/jg014.jpg" />
+          <img src="img/jgt/jg015.jpg" />
+          <img src="img/jgt/jg016.jpg" />
+          <img src="img/jgt/jg017.jpg" />
+          <img src="img/jgt/jg018.jpg" />
+          <img src="img/jgt/jg019.jpg" />
 				</div>
 				
 				<script type="text/javascript">
